--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Build React App
       run: yarn build
     - name: Install Surge
-      run: npm instll --global surge
+      run: npm install --global surge
     - name: Deploying to surge
       run: surge ./build shoe-shop.surge.sh --token ${{ secrets.SURGE_TOKEN }}
